cabal-version : 3.0
name          : fountain2latex
version       : 0.1.0.0
synopsis      : a simple utility to convert the .fountain format to LaTeX
bug-reports   : https://github.com/CubOfJudahsLion/fountain2latex/issues
license       : MIT
author        : Alexander Feterman Naranjo
maintainer    : 10951848+CubOfJudahsLion@users.noreply.github.com
copyright     : (c) 2023 Alexander Feterman Naranjo
category      : Language
extra-source-files:
    CHANGELOG.md
    README.md
    Makefile

executable fountain2latex
    main-is:          Main.hs
    other-modules:    GitVersion
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:die
    build-depends:    base ^>=4.16.4.0
                 ,    directory
                 ,    text
                 ,    attoparsec >= 0.14.4 && < 0.15
    hs-source-dirs:   src
    default-language: Haskell2010

